--- a/module/Admin/view/admin/index/category.phtml
+++ b/module/Admin/view/admin/index/category.phtml
@@ -1,1 +1,127 @@
-﻿Категории
+﻿<?if(isset($success)){?>
+  <div class="alert alert-success">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>Успешно Добавлено!</strong>
+  </div>
+<?}?>
+<div class="succ_mess"></div>
+<?if(isset($errors)){ 
+	foreach ($errors as  $error) {?>
+    <div class="alert alert-error">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <strong><?=$error?></strong>
+    </div>
+<?}}?>
+<?if(isset($cat_delete)){?>
+  <div class="alert">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>Успешно Удалена!</strong>
+  </div>
+<?}?>
+  <div>
+    <div class="span2">
+    	Рубрика
+    </div>
+    <div class="span10">
+    	<form class="form" action"" method="POST">
+			<div class="input-append">
+			  <input class="span3" id="appendedInputButton" placeholder="Введите название рубрики" name="name" type="text">
+			  <button class="btn btn-primary" name="btn_addcat" type="submit">Добавить</button>
+			</div>	
+		</form>		
+    <div class="table_href">
+  		<table class="table">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Название</th>
+              <th>Просмотр</th>
+              <th>Редактирование</th>
+              <th>Удаление</th>
+            </tr>
+          </thead>
+          <tbody>
+          	<? if(!empty($categories)) {foreach ($categories as $cat){?>
+              <tr>
+                <td><?=$cat['category_id']?></td>
+                <td><?=$cat['name']?></td>
+                <td><a href="/cat?id=<?=$cat['category_id']?>"><i class="icon-eye-open" title="Просмотр"></i></a></td>
+                <td><a href="#myModal"  data-toggle="modal"><i data-id="<?=$cat['category_id']?>" class="icon-edit" title="Редактировать"></i></a></td>
+                <td><a href="/admin/deletecategory?id=<?=$cat['category_id']?>"><i class="icon-remove" title="Удалить"></i></a></td>
+              </tr>
+            <?}}?>
+          </tbody>
+      </table>    	
+    </div>
+  </div>
+</div>
+ 
+<script type="text/javascript">
+$(document).ready(function() { 
+$( ".span10 .table_href" ).on( "click", ".icon-edit", function() {
+  id=$(this).data( "id");
+  $.ajax({
+      type:"GET",
+      url: '/admin/getcategory',
+      data:"id="+id,
+      success: function(response) {
+        var data = JSON.parse( response );
+        $( "#name_catedit").val(data.name);
+        $( "#name_catedit").data( "id",id);
+      }
+  });
+});
+
+$( ".btn_editcat" ).click(function() {
+  id=$( "#name_catedit" ).data( "id");
+  name=$( "#name_catedit" ).val();
+  $.ajax({
+      type:"POST",
+      url: '/admin/editcategory',
+      data:"id="+id+"&name="+name,
+      success: function(response) {
+        var data = JSON.parse( response );
+          if (typeof data.errors != 'undefined') {
+              text1='<div class="alert alert-error"><button type="button" class="close" data-dismiss="alert">&times;</button><strong>';
+              text2='</strong></div>';
+              var text3='';
+              jQuery.each( data.errors, function( i, val ) {
+                console.log(val);
+                  text3+=val+' ';
+              });
+              text=text1+text3+text2;
+              $(".err_mess").empty();
+              $(".err_mess").append(text);
+          }
+          if (typeof data.success != 'undefined') {
+              $('#myModal').modal('hide');
+              text='<div class="alert alert-success edit_success"><button type="button" class="close" data-dismiss="alert">&times;</button><strong>Успешно изменено!</strong></div>';
+              $(".succ_mess").empty();
+              $(".err_mess").empty();
+              $(".succ_mess").append(text);
+              $(".table_href").load("/admin/category .table");
+          }
+      }
+  });
+
+});
+});
+</script>
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Изменить рубрику</h3>
+  </div>
+  <div class="modal-body">
+    <div class="err_mess"></div>
+    <form class="form form_edit" action"" method="POST">
+      <div class="input-append">
+        <input class="span3" id="name_catedit" data-id="" placeholder="Введите название рубрики" name="name" type="text">
+      </div>  
+    </form> 
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button>
+    <button class="btn btn-primary btn_editcat">Сохранить</button>
+  </div>
+</div>
