--- a/module/Admin/view/admin/index/author.phtml
+++ b/module/Admin/view/admin/index/author.phtml
@@ -1,1 +1,156 @@
-﻿Авторы
+﻿<?if(isset($success)){?>
+  <div class="alert alert-success">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>Успешно Добавлено!</strong>
+  </div>
+<?}?>
+<div class="succ_mess"></div>
+<?if(isset($errors)){?>
+<div class="alert alert-error">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong><?=implode('<br>',$errors)?></strong>  
+</div>
+<?}?>
+<?if(isset($author_delete)){?>
+  <div class="alert">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>Успешно Удалено!</strong>
+  </div>
+<?}?>
+   <div class="row">
+    <div class="span2">
+    	Рубрика
+    </div>
+    <div class="span10">
+    	<form class="form-horizontal" action"" method="POST">
+			<div class="input-append">
+        <div class="control-group">
+          <label class="control-label" for="appendedInputname">Имя</label>
+          <div class="controls">
+            <input class="input-large" id="appendedInputname" placeholder="Введите имя автора" name="name" type="text">
+          </div>
+        </div>
+        <div class="control-group">
+          <label class="control-label" for="appendedInputprice">Фамилия</label>
+          <div class="controls">
+            <input class="input-large" id="appendedInputprice" placeholder="Введите фамилию автора" name="last_name" type="text">
+          </div>
+        </div>
+        <div class="control-group">
+          <div class="controls">
+             <button class="btn btn-primary" name="btn_addauthor" type="submit">Добавить</button>
+          </div>
+        </div>  
+			</div>	
+		</form>		
+    <div class="table_href">
+  		<table class="table">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Название</th>
+              <th>Фамилия</th>
+              <th>Просмотр</th>
+              <th>Редактирование</th>
+              <th>Удаление</th>
+            </tr>
+          </thead>
+          <tbody>
+          	<? if(!empty($authors)) {foreach ($authors as $author){?>
+              <tr>
+                <td><?=$author['author_id']?></td>
+                <td><?=$author['name']?></td>
+                <td><?=$author['last_name']?></td>
+                <td><a href="/author?id=<?=$author['author_id']?>"><i class="icon-eye-open" title="Просмотр"></i></a></td>
+                <td><a href="#myModal"  data-toggle="modal"><i data-id="<?=$author['author_id']?>" class="icon-edit" title="Редактировать"></i></a></td>
+                <td><a href="/admin/deleteauthor?id=<?=$author['author_id']?>"><i class="icon-remove" title="Удалить"></i></a></td>
+              </tr>
+            <?}}?>
+          </tbody>
+      </table>    	
+    </div>
+  </div>
+</div>
+ 
+<script type="text/javascript">
+$(document).ready(function() { 
+$( ".span10 .table_href" ).on( "click", ".icon-edit", function() {
+  id=$(this).data( "id");
+  $.ajax({
+      type:"GET",
+      url: '/admin/getauthor',
+      data:"id="+id,
+      success: function(response) {
+        var data = JSON.parse( response );
+        $( "#appendedInputnamef").val(data.name);
+        $( "#appendedInputlastnamef").val(data.last_name);
+        $( "#appendedInputnamef").data( "id",id);
+      }
+  });
+});
+
+$( ".btn_editauthor" ).click(function() {
+  id=$( "#appendedInputnamef" ).data( "id");
+  name=$( "#appendedInputnamef" ).val();
+  last_name=$( "#appendedInputlastnamef" ).val();
+  $.ajax({
+      type:"POST",
+      url: '/admin/editauthor',
+      data:"id="+id+"&name="+name+"&last_name="+last_name,
+      success: function(response) {
+        var data = JSON.parse( response );
+          if (typeof data.errors != 'undefined') {
+              text1='<div class="alert alert-error"><button type="button" class="close" data-dismiss="alert">&times;</button><strong>';
+              text2='</strong></div>';
+              var text3='';
+              jQuery.each( data.errors, function( i, val ) {
+                console.log(val);
+                  text3+=val+' ';
+              });
+              text=text1+text3+text2;
+              $(".err_mess").empty();
+              $(".err_mess").append(text);
+          }
+          if (typeof data.success != 'undefined') {
+              $('#myModal').modal('hide');
+              text='<div class="alert alert-success edit_success"><button type="button" class="close" data-dismiss="alert">&times;</button><strong>Успешно изменено!</strong></div>';
+              $(".succ_mess").empty();
+              $(".err_mess").empty();
+              $(".succ_mess").append(text);
+              $(".table_href").load("/admin/author .table");
+          }
+      }
+  });
+
+});
+});
+</script> 
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Изменить автора</h3>
+  </div>
+  <div class="modal-body">
+    <div class="err_mess"></div>
+    <form class="form-horizontal form_edit" action"" method="POST">
+      <div class="input-append">
+        <div class="control-group">
+          <label class="control-label" for="appendedInputnamef">Имя</label>
+          <div class="controls">
+            <input class="input-large" id="appendedInputnamef" placeholder="Введите имя автора" name="name" type="text">
+          </div>
+        </div>
+        <div class="control-group">
+          <label class="control-label" for="appendedInputlastnamef">Фамилия</label>
+          <div class="controls">
+            <input class="input-large" id="appendedInputlastnamef" placeholder="Введите фамилию автора" name="last_name" type="text">
+          </div>
+        </div>
+      </div>  
+    </form> 
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button>
+    <button class="btn btn-primary btn_editauthor">Сохранить</button>
+  </div>
+</div>
