форма валидация в админке

--- a/module/Admin/view/admin/index/category.phtml
+++ b/module/Admin/view/admin/index/category.phtml
@@ -1,4 +1,5 @@
-﻿<? $error=$this->formElementErrors($form->get('name')); 
+﻿<? $errors[]=$this->formElementErrors($form->get('name')); 
+
 ?>
 <?if(isset($success)){?>
   <div class="alert alert-success">
