--- a/module/Admin/view/admin/index/author.phtml
+++ b/module/Admin/view/admin/index/author.phtml
@@ -1,16 +1,20 @@
-﻿<?if(isset($success)){?>
+﻿<? $errors[]=$this->formElementErrors($form->get('name'));
+ $errors[]=$this->formElementErrors($form->get('last_name')); 
+ ?>
+<?if(isset($success)){?>
   <div class="alert alert-success">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
     <strong>Успешно Добавлено!</strong>
   </div>
 <?}?>
 <div class="succ_mess"></div>
-<?if(isset($errors)){?>
+<?if(isset($errors)&&$errors[0]!=""){?>
 <div class="alert alert-error">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
     <strong><?=implode('<br>',$errors)?></strong>  
 </div>
 <?}?>
+
 <?if(isset($author_delete)){?>
   <div class="alert">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -27,22 +31,25 @@
         <div class="control-group">
           <label class="control-label" for="appendedInputname">Имя</label>
           <div class="controls">
-            <input class="input-large" id="appendedInputname" placeholder="Введите имя автора" name="name" type="text">
+            <?php echo $this->formHidden($form->get('author_id')); ?>
+            <?php echo $this->formInput($form->get('name')); ?>
           </div>
         </div>
         <div class="control-group">
           <label class="control-label" for="appendedInputprice">Фамилия</label>
           <div class="controls">
-            <input class="input-large" id="appendedInputprice" placeholder="Введите фамилию автора" name="last_name" type="text">
+            <?php echo $this->formInput($form->get('last_name')); ?>
           </div>
         </div>
         <div class="control-group">
           <div class="controls">
-             <button class="btn btn-primary" name="btn_addauthor" type="submit">Добавить</button>
+              <?php echo $this->formSubmit($form->get('btn_addauthor')); ?>
           </div>
         </div>  
 			</div>	
-		</form>		
+       <?
+       echo $this->form()->closeTag();
+       ?>	
     <div class="table_href">
   		<table class="table">
           <thead>
